# DORA_Explorer

./: .gitignore  CLAUDE.md  DORA_DB.xlsx  DORA_DB_GeneratorV3.xlsx  DORA_DB_GeneratorV4.xlsx  DORA_DB_Zulu.xlsx  DORA_DB_v3.xlsx  DORA_DB_v4.xlsx  DORA_DB_v5.xlsx  DORA_shell_prompt.md  README.md  azure_api.py  chart_from_excel.py  dora_charts.py  dora_cli.py  dora_metrics.py  initial_prompt.md  requirements.txt
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: azure_devops.py
backend/tests/: test_main.py
examples/: DORA_DB_Aplha.xlsx  DORA_DB_BETA.xlsx  DORA_DB_CHARLIE.xlsx  DORA_DB_DELTA.xlsx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
reports/: dora_EL.AI_pipelines_20260218_121035.json  dora_Nova_pipelines_20260218_120852.json  dora_Nova_pipelines_20260218_120907.json
tests/: generate_mock_data.py  run_tests.py
tests/mock_data/: alpha_team.json  bravo_team.json  charlie_team.json  delta_team.json
